--- a/front-end/src/assets/styles/variables.scss
+++ b/front-end/src/assets/styles/variables.scss
@@ -1,4 +1,9 @@
 // Font Family
 $font-Public-Sans: "Public Sans", sans-serif;
 
+// Font Size
 $font-size-default: 0.9375rem;
+
+// Color
+$color-gray: #495057;
+$color-purple: #7269ef;
