--- a/front-end/src/assets/styles/global.scss
+++ b/front-end/src/assets/styles/global.scss
@@ -82,3 +82,10 @@ button {
         }
     }
 }
+
+.text-secondary-read {
+    color: $color-secondary;
+}
+.text-primary-unread {
+    color: $color-primary;
+}
