--- a/front-end/src/assets/styles/variables.scss
+++ b/front-end/src/assets/styles/variables.scss
@@ -7,3 +7,6 @@ $font-size-default: 0.9375rem;
 // Color
 $color-gray: #495057;
 $color-purple: #7269ef;
+$color-secondary: #7589a3;
+$color-primary: #081c36;
+$color-hover: #e6ebf5;
