--- a/front-end/src/pages/home/pages/chat/style.scss
+++ b/front-end/src/pages/home/pages/chat/style.scss
@@ -29,3 +29,11 @@ h5 {
         cursor: pointer;
     }
 }
+
+.chat-user-list {
+    & li.active {
+        .chat-user {
+            background-color: $color-hover;
+        }
+    }
+}
