--- a/front-end/src/assets/styles/global.scss
+++ b/front-end/src/assets/styles/global.scss
@@ -43,49 +43,41 @@ ul {
     padding: 0;
 }
 
-.fw-500 {
-    font-weight: 500;
-}
-.bg-soft-light {
-    background-color: rgba(230, 235, 245, 0.25) !important;
-}
+// .fw-500 {
+//     font-weight: 500;
+// }
+// .bg-soft-light {
+//     background-color: rgba(230, 235, 245, 0.25) !important;
+// }
 
-.text-primary {
-    color: $color-purple !important;
-}
+// .text-primary {
+//     color: $color-purple !important;
+// }
 
-h4,
-h5 {
-    font-size: 1.3125rem;
-    font-weight: 600;
-    color: $color-gray;
-    text-transform: capitalize;
-    font-family: $font-Public-Sans;
-}
-button {
-    border: none;
-}
+// button {
+//     border: none;
+// }
 
-.dropdown {
-    button {
-        border: none;
-    }
+// .dropdown {
+//     button {
+//         border: none;
+//     }
 
-    .dropdown-item {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        cursor: pointer;
+//     .dropdown-item {
+//         display: flex;
+//         align-items: center;
+//         justify-content: space-between;
+//         cursor: pointer;
 
-        &:active {
-            background-color: #fff;
-        }
-    }
-}
+//         &:active {
+//             background-color: #fff;
+//         }
+//     }
+// }
 
-.text-secondary-read {
-    color: $color-secondary;
-}
-.text-primary-unread {
-    color: $color-primary;
-}
+// .text-secondary-read {
+//     color: $color-secondary;
+// }
+// .text-primary-unread {
+//     color: $color-primary;
+// }
