--- a/front-end/src/pages/home/components/UserChat/style.scss
+++ b/front-end/src/pages/home/components/UserChat/style.scss
@@ -9,6 +9,10 @@
     &:hover {
         background-color: $color-hover;
     }
+
+    &.active {
+        background-color: $color-hover;
+    }
 }
 .content {
     flex: 1;
